--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
             <div class="slide slide3">
               <img src="img/3nike.png" alt="Product 3" />
             </div>
+            <div class="slide slide4">
+              <img src="img/4allen soly.png" alt="Product 4" />
+            </div>
+            <div class="slide slide5">
+              <img src="img/5puma.png" alt="Product 5" />
+            </div>
+            <div class="slide slide6">
+              <img src="img/6Ritu Kumar.png" alt="Product 6" />
+            </div>
           </div>
           <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
           <a class="next" onclick="changeSlide(1)">&#10095;</a>
